@@ -199,6 +199,12 @@ import org.checkerframework.javacutil.UserError;
     // org.checkerframework.framework.source.SourceeVisitor.checkForSuppressWarningsAnno
     "warnUnneededSuppressions",
 
+    // Require that warning suppression annotations contain a checker key as a prefix in order for
+    // the warning to be suppressed.
+    // org.checkerframework.framework.source.SourceChecker.checkSuppressWarnings(java.lang.String[],
+    // java.lang.String)
+    "requirePrefixInWarningSuppressions",
+
     ///
     /// Partially-annotated libraries
     ///
@@ -1264,9 +1270,30 @@ public abstract class SourceChecker extends AbstractTypeProcessor
             fmtString = sb.toString();
 
         } else {
+            // The key for the warning/error being printed, in brackets; prefixes the error message.
             final String suppressing;
             if (this.processingEnv.getOptions().containsKey("showSuppressWarningKeys")) {
                 suppressing = String.format("[%s:%s] ", this.getSuppressWarningsKeys(), msgKey);
+            } else if (this.processingEnv
+                    .getOptions()
+                    .containsKey("requirePrefixInWarningSuppressions")) {
+                // If the warning key must be prefixed with a checker key, then add that to the
+                // warning key that is printed.
+                String defaultKey = getDefaultWarningSuppressionKey();
+                Collection<String> keys = getSuppressWarningsKeys();
+                if (keys.contains(defaultKey)) {
+                    suppressing = String.format("[%s:%s] ", defaultKey, msgKey);
+                } else if (keys.isEmpty()) {
+                    keys.remove(SUPPRESS_ALL_KEY);
+                    if (keys.isEmpty()) {
+                        suppressing = String.format("[%s:%s] ", SUPPRESS_ALL_KEY, msgKey);
+                    } else {
+                        String firstKey = keys.iterator().next();
+                        suppressing = String.format("[%s:%s] ", firstKey, msgKey);
+                    }
+                } else {
+                    suppressing = String.format("[%s] ", msgKey);
+                }
             } else {
                 suppressing = String.format("[%s] ", msgKey);
             }
@@ -1413,6 +1440,8 @@ public abstract class SourceChecker extends AbstractTypeProcessor
         if (userSwKeys == null) {
             return false;
         }
+        // Is the name of the checker required to suppress a warning?
+        boolean requirePrefix = hasOption("requirePrefixInWarningSuppressions");
 
         Collection<String> checkerSwKeys = this.getSuppressWarningsKeys();
 
@@ -1420,12 +1449,18 @@ public abstract class SourceChecker extends AbstractTypeProcessor
         for (String suppressWarningValue : userSwKeys) {
             for (String checkerKey : checkerSwKeys) {
                 if (suppressWarningValue.equalsIgnoreCase(checkerKey)) {
+                    // Emitted error is exactly a @SuppressWarnings key: "nullness", for example.
                     return true;
                 }
 
                 String expected = checkerKey + ":" + errKey;
                 if (expected.toLowerCase().contains(suppressWarningValue.toLowerCase())) {
-                    return true;
+                    if (!requirePrefix
+                            || suppressWarningValue
+                                    .toLowerCase()
+                                    .startsWith(checkerKey.toLowerCase())) {
+                        return true;
+                    }
                 }
             }
         }
@@ -2047,18 +2082,23 @@ public abstract class SourceChecker extends AbstractTypeProcessor
             }
 
         } else {
-            // No annotation, by default infer key from class name
-            String className = this.getClass().getSimpleName();
-            int indexOfChecker = className.lastIndexOf("Checker");
-            if (indexOfChecker == -1) {
-                indexOfChecker = className.lastIndexOf("Subchecker");
-            }
-            String key =
-                    (indexOfChecker == -1) ? className : className.substring(0, indexOfChecker);
-            result.add(key.trim().toLowerCase());
+            // No @SuppressWarningsKeys annotation, by default infer key from class name
+            String key = getDefaultWarningSuppressionKey();
+            result.add(key);
         }
 
         return result;
+    }
+
+    /** @return the default warning suppression key for this checker based on the checker name */
+    private String getDefaultWarningSuppressionKey() {
+        String className = this.getClass().getSimpleName();
+        int indexOfChecker = className.lastIndexOf("Checker");
+        if (indexOfChecker == -1) {
+            indexOfChecker = className.lastIndexOf("Subchecker");
+        }
+        String result = (indexOfChecker == -1) ? className : className.substring(0, indexOfChecker);
+        return result.toLowerCase();
     }
 
     /**
